--- a/src/main/resources/templates/article.html
+++ b/src/main/resources/templates/article.html
@@ -5,11 +5,23 @@
       layout:decorate="~{layouts/master}"
 >
 <head>
-  <title>Article Page</title>
+    <title>Article Page</title>
 </head>
 <body>
-<main class="px-3 container"  layout:fragment="main-content">
-  <h1>Article Page</h1>
+<main class="px-3 container" layout:fragment="main-content">
+    <div class="py-5">
+        <div class="mb-4 border-bottom border-1 pb-3">
+            <a href="/article/new" class="btn btn-primary"><i class="bi bi-file-earmark-plus"></i> New Article</a>
+        </div>
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+
+            <div class="col" th:each="article : ${articles}" th:object="${article}">
+                <div
+                    th:replace="~{fragments/card::action(*{uuid},*{title},*{thumbnail},*{author})}"
+                ></div>
+            </div>
+        </div>
+    </div>
 </main>
 </body>
 </html>
