--- a/src/main/resources/templates/fragments/card.html
+++ b/src/main/resources/templates/fragments/card.html
@@ -11,18 +11,18 @@
         </div>
     </a>
 
-    <div class="card shadow-sm border-0" th:fragment="action(uuid, title, thumbnail,author)">
+    <div class="card shadow-sm border-0 h-100" th:fragment="action(uuid, title, thumbnail,author)">
         <img th:src="@{${thumbnail}}" alt="picture" class="bd-placeholder-img card-img-top">
         <div class="card-body">
             <p class="card-text" th:text="${title}"></p>
-            <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-success"><i class="bi bi-eye"></i> View</button>
-                    <button type="button" class="btn btn-sm btn-outline-primary"><i class="bi bi-pencil-square"></i> Edit</button>
-                    <button type="button" class="btn btn-sm btn-outline-danger"><i class="bi bi-trash"></i> Delete</button>
-                </div>
-                <small class="text-body-secondary" th:text="${author}">author</small>
+        </div>
+        <div class="card-footer border-0 bg-transparent d-flex justify-content-between align-items-center">
+            <div class="btn-group">
+                <button type="button" class="btn btn-sm btn-outline-success"><i class="bi bi-eye"></i> View</button>
+                <button type="button" class="btn btn-sm btn-outline-primary"><i class="bi bi-pencil-square"></i> Edit</button>
+                <button type="button" class="btn btn-sm btn-outline-danger"><i class="bi bi-trash"></i> Delete</button>
             </div>
+            <small class="text-body-secondary" th:text="${#strings.substring(author,0,8).concat('...')}">author</small>
         </div>
     </div>
 </section>
