--- a/src/main/resources/templates/article.html
+++ b/src/main/resources/templates/article.html
@@ -17,7 +17,7 @@
 
             <div class="col" th:each="article : ${articles}" th:object="${article}">
                 <div
-                    th:replace="~{fragments/card::action(*{uuid},*{title},*{thumbnail},*{author})}"
+                    th:replace="~{fragments/card::action(*{uuid},*{title},*{thumbnail},*{author.username})}"
                 ></div>
             </div>
         </div>
