--- a/src/main/resources/templates/fragments/card.html
+++ b/src/main/resources/templates/fragments/card.html
@@ -22,7 +22,12 @@
                 <button type="button" class="btn btn-sm btn-outline-primary"><i class="bi bi-pencil-square"></i> Edit</button>
                 <button type="button" class="btn btn-sm btn-outline-danger"><i class="bi bi-trash"></i> Delete</button>
             </div>
-            <small class="text-body-secondary" th:text="${#strings.substring(author,0,8).concat('...')}">author</small>
+            <div th:if="${#strings.length(author)>8}">
+                <small class="text-body-secondary" th:text="${#strings.substring(author,0,8).concat('...')}">author</small>
+            </div>
+            <div th:if="${#strings.length(author)<8}">
+                <small class="text-body-secondary" th:text="${author}">author</small>
+            </div>
         </div>
     </div>
 </section>
