--- a/src/main/resources/templates/article-new.html
+++ b/src/main/resources/templates/article-new.html
@@ -23,7 +23,7 @@
 
                 <div class="mb-3">
                     <label for="description" class="form-label">Description</label>
-                    <textarea class="form-control" id="description" rows="3"></textarea>
+                    <textarea class="form-control" id="description" th:field="*{description}" rows="3"></textarea>
                 </div>
 
                 <div class="mb-3">
