--- a/src/main/resources/templates/authors.html
+++ b/src/main/resources/templates/authors.html
@@ -10,14 +10,10 @@
 <body>
 <main class="px-3 container" layout:fragment="main-content">
     <div class="py-5">
-        <div class="mb-4 border-bottom border-1 pb-3">
-            <a href="/article/new" class="btn btn-primary"><i class="bi bi-file-earmark-plus"></i> New Article</a>
-        </div>
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-3">
-
-            <div class="col" th:each="article : ${articles}" th:object="${article}">
+            <div class="col" th:each="user : ${authors}" th:object="${user}">
                 <div
-                    th:replace="~{fragments/card::action(*{uuid},*{title},*{thumbnail},*{author},*{description})}"
+                    th:replace="~{fragments/card::author(${user})}"
                 ></div>
             </div>
         </div>
