--- a/src/main/resources/templates/article-new.html
+++ b/src/main/resources/templates/article-new.html
@@ -10,8 +10,10 @@
 <body>
 <main class="px-3 container" layout:fragment="main-content">
     <div class="py-5">
-        <a href="/article" class="btn btn-warning btn-sm"><i class="bi bi-arrow-90deg-left"></i> Back</a>
-        <h1 class="text-center">Create new Article</h1>
+        <div class="position-relative">
+            <a href="/article" class="btn btn-warning btn-sm position-absolute top-50 start-0 translate-middle-y"><i class="bi bi-arrow-90deg-left"></i> Back</a>
+            <h1 class="text-center">Create new Article</h1>
+        </div>
         <hr>
         <form class="row row-cols-md-2" th:action="@{/article/new}" method="post" th:object="${article}" enctype="multipart/form-data">
             <div class="col">
@@ -21,26 +23,30 @@
                     <div  class="form-text text-danger" th:if="${#fields.hasErrors('title')}" th:errors="*{title}">We'll never share your .</div>
                 </div>
 
+                <div class="row">
+                    <div class="col">
+                        <div class="mb-3">
+                            <label for="categories" class="form-label">Categories</label>
+                            <select class="form-select" id="categories" name="category_ids" multiple aria-label="multiple select categories">
+                                <option th:each="cat : ${categories}" th:value="${cat.id}" th:text="${cat.name}">username</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="mb-3">
+                            <label for="author" class="form-label">Author</label>
+                            <select class="form-select" id="author" name="author_id">
+                                <option th:each="user : ${users}" th:value="${user.id}" th:text="${user.username}">username</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="mb-3">
                     <label for="description" class="form-label">Description</label>
-                    <textarea class="form-control" id="description"  placeholder="Enter description..." th:field="*{description}" rows="3"></textarea>
+                    <textarea class="form-control" id="description"  placeholder="Enter description..." th:field="*{description}" rows="5"></textarea>
                 </div>
 
-                <div class="mb-3">
-                    <label for="categories" class="form-label">Categories</label>
-                    <select class="form-select" id="categories" name="category_ids" multiple aria-label="multiple select categories">
-                        <option th:each="cat : ${categories}" th:value="${cat.id}" th:text="${cat.name}">username</option>
-                    </select>
-                </div>
-
-                <div class="mb-3">
-                    <label for="author" class="form-label">Author</label>
-                    <!--                    <input type="text" class="form-control" id="author" th:field="*{author}">-->
-                    <select class="form-select" id="author" name="author_id">
-                        <option th:each="user : ${users}" th:value="${user.id}" th:text="${user.username}">username</option>
-                    </select>
-<!--                    <div  class="form-text text-danger" th:if="${#fields.hasErrors('author')}" th:errors="*{author}">We'll never share your .</div>-->
-                </div>
             </div>
             <div class="col">
                 <div class="mb-3">
@@ -55,7 +61,7 @@
                 </div>
 
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-success">Submit</button>
         </form>
     </div>
 </main>
