--- a/src/main/resources/templates/layouts/master.html
+++ b/src/main/resources/templates/layouts/master.html
@@ -5,10 +5,10 @@
 <head>
   <meta charset="UTF-8">
   <title layout:title-pattern="$CONTENT_TITLE - $LAYOUT_TITLE ">BEGOINGTO</title>
-  <link rel="icon" href="https://icons.getbootstrap.com/assets/img/favicons/favicon.ico" />
+  <link rel="icon" href="https://istad.co/resources/img/logo_md.png" />
   <th:block th:replace="~{fragments/styles}"></th:block>
   <th:block layout:fragment="substyles">
-    <!-- individual web page script  -->
+    <!-- individual web page styles  -->
   </th:block>
 </head>
 <body>
