--- a/src/main/resources/templates/single-article.html
+++ b/src/main/resources/templates/single-article.html
@@ -16,6 +16,27 @@
             <img th:src="@{*{thumbnail}}" alt="picture" class="bd-placeholder-img card-img-top">
             <div class="card-body">
                 <h1 th:text="*{title}">Single Article</h1>
+                <div class="d-flex">
+                    <div
+                            class="text-bg-dark rounded-pill"
+                            style="width: 30px;height: 30px;"
+                    >
+                        <img th:src="@{${article.author.avatar}}" alt="picture" class="w-100 h-100 object-fit-cover rounded-pill border-3">
+                    </div>
+                    <div class="align-items-center mb-0 ms-2">
+                        <div class="d-flex">
+                            <div>
+                                <small th:text="${article.author.name}"></small> |
+                                <small th:text="${#strings.prepend(article.author.username,'@')}"></small>
+                            </div>
+                            <div class="d-flex justify-content-center text-success" style="width: 30px;"><i class="bi bi-stars"></i></div>
+                            <div>
+                                <span class="badge rounded-pill text-bg-warning" th:each="category : ${article.categories}" th:object="${category}" th:text="${category.name}">Warning</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <p class="card-text" th:text="*{description}"></p>
             </div>
         </div>
 
