update get article by Category 🆗💯✅🎉

--- a/src/main/resources/templates/fragments/card.html
+++ b/src/main/resources/templates/fragments/card.html
@@ -1,5 +1,5 @@
 <section>
-<!--    Card Readonly ~ Start -->
+    <!--    Card Readonly ~ Start -->
     <a th:fragment="readonly(uuid, title, thumbnail,author,description,categories)"
        th:href="@{/article/{uuid}(uuid=${uuid})}"
        class="card h-100 shadow-sm text-decoration-none border-0">
@@ -11,7 +11,8 @@
                             class="text-bg-dark rounded-pill"
                             style="width: 50px;height: 50px;"
                     >
-                        <img th:src="@{${author.avatar}}" alt="picture" class="w-100 h-100 object-fit-cover rounded-pill border-3">
+                        <img th:src="@{${author.avatar}}" alt="picture"
+                             class="w-100 h-100 object-fit-cover rounded-pill border-3">
                     </div>
                     <div class="align-self-end mb-0 ms-2">
                         <div>
@@ -47,7 +48,8 @@
     <!--    Card Readonly ~ End -->
 
     <!--    Card Action ~ Start -->
-    <div class="card shadow-sm border-0 h-100" th:fragment="action(uuid, title, thumbnail,author,description,categories)">
+    <div class="card shadow-sm border-0 h-100"
+         th:fragment="action(uuid, title, thumbnail,author,description,categories)">
         <img th:src="@{${thumbnail}}" alt="picture" class="bd-placeholder-img card-img-top">
         <div class="card-body position-relative">
             <div class="position-absolute start-0 translate-middle-y">
@@ -56,7 +58,8 @@
                             class="text-bg-dark rounded-pill"
                             style="width: 50px;height: 50px;"
                     >
-                        <img th:src="@{${author.avatar}}" alt="picture" class="w-100 h-100 object-fit-cover rounded-pill border-3">
+                        <img th:src="@{${author.avatar}}" alt="picture"
+                             class="w-100 h-100 object-fit-cover rounded-pill border-3">
                     </div>
                     <div class="align-self-end mb-0 ms-2">
                         <div>
@@ -77,12 +80,19 @@
                 <p class="card-text" th:text="${description}"></p>
             </div>
             <div>
-                <a href="#" class="badge rounded-pill text-bg-warning text-decoration-none" th:each="category : ${categories}" th:object="${category}" th:text="${category.name}">Warning</a>
+                <a
+
+                        class="badge rounded-pill text-bg-warning text-decoration-none"
+                        th:each="category : ${categories}"
+                        th:href="@{/categories/{id}(id=${category.id})}"
+                        th:object="${category}"
+                        th:text="${category.name}">Warning</a>
             </div>
         </div>
         <div class="card-footer border-0 bg-transparent d-flex justify-content-between align-items-center">
             <div class="btn-group">
-                <a th:href="@{/article/{uuid}(uuid=${uuid})}" class="btn btn-sm btn-outline-success"><i class="bi bi-eye"></i> View</a>
+                <a th:href="@{/article/{uuid}(uuid=${uuid})}" class="btn btn-sm btn-outline-success"><i
+                        class="bi bi-eye"></i> View</a>
                 <button type="button" class="btn btn-sm btn-outline-primary"><i class="bi bi-pencil-square"></i> Edit
                 </button>
                 <button type="button" class="btn btn-sm btn-outline-danger"><i class="bi bi-trash"></i> Delete</button>
@@ -105,13 +115,14 @@
             <h5 class="card-title mb-0 text-uppercase" th:text="${user.name}">Card title</h5>
             <b class="text-primary" th:text="${#strings.prepend(user.username,'@')}"></b>
             <p class="mb-1">Gender: <span class="text-capitalize" th:text="${user.gender}"></span></p>
-            <address class="card-text mb-1" >
+            <address class="card-text mb-1">
                 Address: <span th:text="${user.address}"></span>
             </address>
             <p class="mb-1">Email: <span th:text="${user.email}"></span></p>
         </div>
         <div class="card-footer">
-            <a th:href="@{/authors/{id}(id=${user.id})}" class="btn btn-primary btn-sm"><i class="bi bi-eye"></i> View Profile</a>
+            <a th:href="@{/authors/{id}(id=${user.id})}" class="btn btn-primary btn-sm"><i class="bi bi-eye"></i> View
+                Profile</a>
         </div>
     </div>
     <!--    Card Author ~ End -->
