--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -35,7 +35,11 @@
                     </h3>
                     <div class="card-body">
                         <ul class="list-group list-group-flush">
-                            <a href="#" class="list-group-item" th:each="category : ${categories}" th:text="${category.name}">An item</a>
+                            <a class="list-group-item"
+                               th:each="category : ${categories}"
+                               th:href="@{/categories/{id}(id=${category.id})}"
+                               th:text="${category.name}"
+                            >An item</a>
                         </ul>
                     </div>
                 </div>
