--- a/src/main/resources/templates/fragments/welcome.html
+++ b/src/main/resources/templates/fragments/welcome.html
@@ -1,7 +1,7 @@
 <section class="py-5 text-center">
   <div class="row py-lg-5">
     <div class="col-lg-6 col-md-8 mx-auto">
-      <h1 class="fw-light">Welcome to <span class="text-uppercase fw-bolder text-danger">begoingto</span></h1>
+      <h1 class="fw-light">Welcome to <span class="text-uppercase fw-bolder text-danger">begoingto <br>Java Spring Boot </span></h1>
       <p class="lead text-body-secondary">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don’t simply skip over it entirely.</p>
       <p>
         <a href="#" class="btn btn-primary my-2"><i class="bi bi-paypal"></i> Donate</a>
