--- a/src/main/resources/templates/article.html
+++ b/src/main/resources/templates/article.html
@@ -14,13 +14,16 @@
             <a href="/article/new" class="btn btn-primary"><i class="bi bi-file-earmark-plus"></i> New Article</a>
             <h4 class="m-0">Total articles: <span th:text="${articles.size()}"></span></h4>
         </div>
-        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-3">
-
+        <div th:if="${!articles.isEmpty()}" class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-3">
             <div class="col" th:each="article : ${articles}" th:object="${article}">
                 <div
-                    th:replace="~{fragments/card::action(*{uuid},*{title},*{thumbnail},*{author},*{description},*{categories})}"
+                        th:replace="~{fragments/card::action(*{uuid},*{title},*{thumbnail},*{author},*{description},*{categories})}"
                 ></div>
             </div>
+        </div>
+
+        <div th:if="${articles.isEmpty()}">
+            <p class="text-center text-danger opacity-75">Empty article</p>
         </div>
     </div>
 </main>
