--- a/src/main/resources/templates/fragments/styles.html
+++ b/src/main/resources/templates/fragments/styles.html
@@ -1,2 +1,7 @@
 <link rel="stylesheet" th:href="@{/resources/css/bootstrap.min.css}">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
+<style>
+    .c-dropdown:active{
+        background-color: transparent;
+    }
+</style>
